--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ streamlit-webrtc==0.47.1
 twilio~=8.1.0
 streamlit_option_menu==0.3.12
 mediapipe~=0.8.6
-streamlit
+streamlit>=1.1.0
 opencv_contrib_python==4.4.0.46
